syntax = "proto3";

import "login.proto";
import "update_user.proto";
import "change_password.proto";

package pd;
option go_package = "auth-service/pd";

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc ChangePassword(ChangePasswordRequest)  returns (ChangePasswordRequest);
}